2009-07-03  Roland McGrath  <roland@redhat.com>

	* Makefile.am (AM_CXXFLAGS): Drop -Wno-unused-parameter.

	* dwarfcmp.cc (open_file): Exit 77 for no DWARF under -T.

2009-07-02  Roland McGrath  <roland@redhat.com>

	* dwarflint-hl.cc (operator<<): dwarf::VS_unit_reference is gone.

	* dwarfcmp.cc (main): Update -T constructors using tracker.
	Instantiate and test dwarf_output for -T too.

2009-07-01  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc (talker): Update constructor parameters.

2009-06-19  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc: Revamp using dwarf_comparator.

	* dwarflint-expected-at.cc: Include <config.h> first.
	* dwarflint-expected.hh (expected_map::expectation_map):
	Use dwarf::tags.
	(to_string): Function removed.
	* dwarflint-hl.cc (recursively_validate): Don't use it.

	* dwarflint.c (abbrev_table_load): No-op control flow fiddle
	silences gcc-4.4 -O3 warning.

2009-04-02  Roland McGrath  <roland@redhat.com>

	* Makefile.am (noinst_HEADERS): Add dwarfstrings.h here.
	(dwarflint_SOURCES): Add dwarflint-expected.hh and dwarflint.h here.
	(noinst_HEADERS): Add expr_opcodes.h too.

2009-03-24  Roland McGrath  <roland@redhat.com>

	* Makefile.am (libdwplusplus_SOURCES): Variable removed.
	(dwarfcmp_SOURCES, dwarflint_SOURCES): Don't use it.
	(libdwpp): New variable.
	(dwarfcmp_LDADD, dwarflint_LDADD): Use it.

2009-03-05  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Add --nohl command line switch.

2009-01-28  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Coding style cleanups.
	(found_hole): Tolerate zero-padding to given alignment.

2009-01-27  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Implement validation of .debug_ranges and
	references from .debug_info to .debug_ranges.

2009-01-27  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Check that the base address selection entry
	actually changes base address.

2009-01-27  Petr Machata  <pmachata@redhat.com>
