@@ -1,3 +1,10 @@
+2009-07-06  Roland McGrath  <roland@redhat.com>
+
+	* dwarfcmp.cc (test_writer): Make it an int.
+	(parse_opt): Make -T increment it.
+	(main): Test only dwarf_output for -T, only dwarf_edit for -TT,
+	both only for -TTT.
+
 2009-07-03  Roland McGrath  <roland@redhat.com>
 
 	* Makefile.am (AM_CXXFLAGS): Drop -Wno-unused-parameter.
